Avoid calling requestUpdate from wrong thread

In certain circumstances, we can get to createDecoration()
from the render thread (from QWaylandGLContext::makeCurrent)

Calling requestUpdate() from this secondary thread would
cause an assert, so we queue the call on the appropriate
thread instead.

This amends af7b60ade5c4be81cbc58eb18307c017d5594071.

Fixes: QTBUG-105308
Change-Id: I4805265f39e24eb1464897532be2025bc3c27728
Reviewed-by: Inho Lee <inho.lee@qt.io>
(cherry picked from commit a0c0b5b42335808c2222cbf72c1758e955731ed9)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>